gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/diag_funclit.d
version https://git-lfs.github.com/spec/v1
oid sha256:c6d856d00827a2ef44a3d8b3a2d38bbddb0718802a2f09eec3bde6804fbb7233
size 2211
